--- a/kpaint/CHANGES
+++ b/kpaint/CHANGES
@@ -1,3 +1,8 @@
+0.4.2   [Robert Williams]  Renamed Paint.kdelnk to kpaint.kdelnk
+        [Robert Williams]  Added -caption "%c" to kpaint.kdelnk
+        [Robert Williams]  I put APPVERSTR as the first #define
+        [Robert Williams]  Added getHelpMenu()
+
 0.3.1	Fixed error in Makefile.in (missing -lkfm)
 	Fixed help menu labels
 
