--- a/kfract/ChangeLog
+++ b/kfract/ChangeLog
@@ -1,6 +1,13 @@
 Changes in Kfract
 =================
 
+KFract 0.1.3   25 February 1998
+- [Robert Williams]  Added version.h
+- [Robert Williams]  renamed Fract.kdelnk to kfract.kdelnk
+- [Robert Williams]  added getHelpMenu()
+- [Robert Williams]  added -caption "%c" to kfract.kdelnk
+
+
 KFract 0.1.2   20.08.97
 -----------------------
 
