--- a/kview/README
+++ b/kview/README
@@ -78,6 +78,10 @@ Tool: Ghostscript with PPM support
 CHANGES
 -------
 
+Version 0.11.4
+  * [Robert Williams]  Added KVIEW_VERSION to version.h 
+  * [Robert Williams]  Added getCaption()
+  * [Robert Williams]  Added -caption "%c" to kview.kdelnk
 Since 0.11.0 (Martin Hartig)
 
 0.11.3:
