--- a/po/zh/kpaint.po
+++ b/po/zh/kpaint.po
@@ -290,7 +290,7 @@ msgid ""
 "Error: Netword Load Failed\n"
 "Something went wrong :-("
 msgstr ""
-"錯誤: 網路讀取失敗\n"
+"錯誤: 網路讀取失敗"
 
 #: kpaint.cpp:580
 msgid "KPaint: Could not start KFM"
