--- a/po/pl/kdvi.po
+++ b/po/pl/kdvi.po
@@ -1,13 +1,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kdvi \n"
-"POT-Creation-Date: 1998-01-05 22:04+0100\n"
+"POT-Creation-Date: 1998-03-05 17:23+0100\n"
 "PO-Revision-Date: 1998-01-22 23:13+0100\n"
 "Last-Translator: Piotr Roszatycki <dexter@fnet.com.pl>\n"
 "Content-Type: text/plain; charset=iso-8859-2\n"
 
 #: dviwin.cpp:216 dviwin.cpp:232 dviwin.cpp:246 dviwin.cpp:283 dviwin.cpp:300
-#: kdvi.cpp:515
+#: kdvi.cpp:514
 msgid "Notice"
 msgstr "Uwaga"
 
@@ -59,381 +59,386 @@ msgstr "HEJ"
 msgid "What's this? DVI problem!\n"
 msgstr "A to co? Problem DVI!\n"
 
-#: kdvi.cpp:91
+#: kdvi.cpp:92
 msgid "No document"
 msgstr "Brak dokumentu"
 
-#: kdvi.cpp:172
+#: kdvi.cpp:108
+#, fuzzy
+msgid "Toggle Menubar"
+msgstr "Prze³±cz pasek menu"
+
+#: kdvi.cpp:110
+#, fuzzy
+msgid "Mark page"
+msgstr "Zaznacz wszystkie"
+
+#: kdvi.cpp:112
+#, fuzzy
+msgid "Redraw"
+msgstr "Przerysuj stronê"
+
+#: kdvi.cpp:114
+#, fuzzy
+msgid "Preferences ..."
+msgstr "&W³a¶ciwo¶ci..."
+
+#: kdvi.cpp:173
 msgid "&Open ..."
 msgstr "&Otwórz..."
 
-#: kdvi.cpp:179
+#: kdvi.cpp:180
 msgid "Open &recent"
 msgstr "Otwórz poprz&edni"
 
-#: kdvi.cpp:181
+#: kdvi.cpp:182
 msgid "&Print ..."
 msgstr "&Drukuj..."
 
-#: kdvi.cpp:189
+#: kdvi.cpp:190
 msgid "Zoom &in"
 msgstr "Powiê&ksz"
 
-#: kdvi.cpp:190
+#: kdvi.cpp:191
 msgid "Zoom &out"
 msgstr "Pomnie&jsz"
 
-#: kdvi.cpp:191
+#: kdvi.cpp:192
 msgid "&Fit to page"
 msgstr "Dopasuj do s&trony"
 
-#: kdvi.cpp:192
+#: kdvi.cpp:193
 msgid "Fit to page &width"
 msgstr "Dopasuj do sze&roko¶ci strony"
 
-#: kdvi.cpp:194
+#: kdvi.cpp:195
 msgid "&Redraw page"
 msgstr "Przery&suj stronê"
 
-#: kdvi.cpp:201
+#: kdvi.cpp:202
 msgid "&Previous"
 msgstr "&Poprzedni"
 
-#: kdvi.cpp:202
+#: kdvi.cpp:203
 msgid "&Next"
 msgstr "&Nastêpny"
 
-#: kdvi.cpp:203
+#: kdvi.cpp:204
 msgid "&First"
 msgstr "Pie&rwszy"
 
-#: kdvi.cpp:204
+#: kdvi.cpp:205
 msgid "&Last"
 msgstr "Os&tatni"
 
-#: kdvi.cpp:205
+#: kdvi.cpp:206
 msgid "&Go to ..."
 msgstr "&Id¼ do..."
 
-#: kdvi.cpp:208
+#: kdvi.cpp:209
 msgid "&Page"
 msgstr "&Strona"
 
-#: kdvi.cpp:213
+#: kdvi.cpp:214
 msgid "&Preferences ..."
 msgstr "&W³a¶ciwo¶ci..."
 
-#: kdvi.cpp:214
+#: kdvi.cpp:215
 msgid "&Keys ..."
 msgstr "&Klawisze..."
 
-#: kdvi.cpp:216
+#: kdvi.cpp:217
 msgid "Make PK-&fonts"
 msgstr "Utwórz PK-&czcionki"
 
-#: kdvi.cpp:218
+#: kdvi.cpp:219
 msgid "Show PS"
 msgstr "Poka¿ PS"
 
-#: kdvi.cpp:220
+#: kdvi.cpp:221
 msgid "Show &Menubar"
 msgstr "Poka¿ pasek &menu"
 
-#: kdvi.cpp:222
+#: kdvi.cpp:223
 msgid "Show &Buttons"
 msgstr "Poka¿ pasek &przycisków"
 
-#: kdvi.cpp:224
+#: kdvi.cpp:225
 msgid "Show Page Lis&t"
 msgstr "Poka¿ lis&tê stron"
 
-#: kdvi.cpp:226
+#: kdvi.cpp:227
 msgid "Show &Statusbar"
 msgstr "Poka¿ pasek &stanu"
 
-#: kdvi.cpp:228
+#: kdvi.cpp:229
 msgid "Show Scro&llbars"
 msgstr "Poka¿ paski prze&wijania"
 
-#: kdvi.cpp:239
-msgid "&Contents"
-msgstr "Pomo&c"
-
-#: kdvi.cpp:242
-msgid "About &Qt"
-msgstr "Informacje o &Qt"
-
-#: kdvi.cpp:261
-msgid "Open document ..."
-msgstr "Otwórz dokument..."
-
-#: kdvi.cpp:262
-msgid "Reload document"
-msgstr "Prze³aduj dokument"
-
-#: kdvi.cpp:263
-msgid "Print ..."
-msgstr "Drukuj..."
-
-#: kdvi.cpp:265
-msgid "Go to first page"
-msgstr "Id¼ do pierwszej strony"
-
-#: kdvi.cpp:266
-msgid "Go to previous page"
-msgstr "Id¼ do poprzedniej strony"
-
-#: kdvi.cpp:267
-msgid "Go down then top of next page"
-msgstr "Id¼ do pocz±tku nastêpnej strony"
-
-#: kdvi.cpp:268
-msgid "Go to next page"
-msgstr "Id¼ do nastêpnej strony"
-
-#: kdvi.cpp:269
-msgid "Go to last page"
-msgstr "Id¼ do ostatniej strony"
-
-#: kdvi.cpp:271
-msgid "Decrease magnification"
-msgstr "Zmniejsz powiêkszenie"
-
-#: kdvi.cpp:272
-msgid "Small text"
-msgstr "Ma³y tekst"
-
-#: kdvi.cpp:273
-msgid "Large text"
-msgstr "Du¿y tekst"
-
-#: kdvi.cpp:274
-msgid "Increase magnification"
-msgstr "Zwiêksz powiêkszenie"
-
-#: kdvi.cpp:299
-msgid "Scroll window and switch the page"
-msgstr "Przewiñ okno i prze³±cz stronê"
-
-#: kdvi.cpp:308
-msgid "Select page and mark pages for printing"
-msgstr "Wybierz stronê i zaznacz strony do druku"
-
-#: kdvi.cpp:323
-msgid "X:0000, Y:0000 "
-msgstr "X:0000, Y:0000 "
-
-#: kdvi.cpp:325
-msgid "Shrink: xx"
-msgstr "Powiêkszenie: xx"
-
-#: kdvi.cpp:327
-msgid "Page: xxxx / xxxx"
-msgstr "Strona: xxxx / xxxx"
-
-#: kdvi.cpp:344 kdvi.cpp:396
-msgid "New window"
-msgstr "Nowe okno"
-
-#: kdvi.cpp:345 kdvi.cpp:397
-msgid "Open file"
-msgstr "Otwórz plik"
-
-#: kdvi.cpp:346 kdvi.cpp:398
-msgid "Print dialog"
-msgstr "Opcje wydruku"
-
-#: kdvi.cpp:348 kdvi.cpp:400
-msgid "Zoom in"
-msgstr "Powiêksz"
-
-#: kdvi.cpp:349 kdvi.cpp:401
-msgid "Zoom out"
-msgstr "Pomniejsz"
-
-#: kdvi.cpp:350 kdvi.cpp:402
-msgid "Fit window"
-msgstr "Dopasuj okno"
-
-#: kdvi.cpp:351 kdvi.cpp:403
-msgid "Fit width"
-msgstr "Dopasuj szeroko¶æ"
-
-#: kdvi.cpp:352 kdvi.cpp:404
-msgid "Redraw page"
-msgstr "Przerysuj stronê"
-
-#: kdvi.cpp:353 kdvi.cpp:406
-msgid "Next page"
-msgstr "Nastêpna strona"
-
-#: kdvi.cpp:354 kdvi.cpp:405
-msgid "Previous page"
-msgstr "Poprzednia strona"
-
-#: kdvi.cpp:355 kdvi.cpp:408
-msgid "Last page"
-msgstr "Ostatnia strona"
-
-#: kdvi.cpp:356 kdvi.cpp:407
-msgid "First page"
-msgstr "Pierwsza strona"
-
-#: kdvi.cpp:357 kdvi.cpp:409
-msgid "Goto page"
-msgstr "Id¼ do strony"
-
-#: kdvi.cpp:358
-msgid "Configure keys"
-msgstr "Skonfiguruj klawisze"
-
-#: kdvi.cpp:359 kdvi.cpp:410
-msgid "Toggle show PS"
-msgstr "Prze³±cz widok PS "
-
-#: kdvi.cpp:360 kdvi.cpp:411
-msgid "Toggle menu bar"
-msgstr "Prze³±cz pasek menu"
-
-#: kdvi.cpp:361 kdvi.cpp:412
-msgid "Toggle button bar"
-msgstr "Prze³±cz pasek przycisków"
-
-#: kdvi.cpp:362 kdvi.cpp:413
-msgid "Toggle page list"
-msgstr "Prze³±cz listê stron"
-
-#: kdvi.cpp:363 kdvi.cpp:414
-msgid "Toggle status bar"
-msgstr "Prze³±cz pasek stanu"
-
-#: kdvi.cpp:364 kdvi.cpp:415
-msgid "Toggle scroll bars"
-msgstr "Prze³±cz paski &przewijania"
-
-#: kdvi.cpp:467
-msgid "File open dialog is open"
-msgstr "Okno dialogowe pliku jest otwarte"
-
-#: kdvi.cpp:516
-msgid "Can't read file:\n"
-msgstr "Nie mo¿na odczytaæ pliku:\n"
-
-#: kdvi.cpp:522
-msgid "Opening "
-msgstr "Otwieranie "
-
-#: kdvi.cpp:547
-msgid "Opened "
-msgstr "Otwarty "
-
-#: kdvi.cpp:557
-msgid "Print dialog is open"
-msgstr "Okno dialogowe drukowania jest otwarte"
-
-#: kdvi.cpp:572
-msgid "View size fits page"
-msgstr "Poka¿ rozmiar dopasowanej strony"
-
-#: kdvi.cpp:581
-msgid "View width fits page"
-msgstr "Poka¿ d³ugo¶æ dopasowanej strony"
-
-#: kdvi.cpp:673
-msgid "Preferences applied"
-msgstr "W³a¶ciwo¶ci zastosowane"
-
-#: kdvi.cpp:677
-msgid " Page "
-msgstr " Strona "
-
-#: kdvi.cpp:679
-msgid "Go to page"
-msgstr "Id¼ do strony"
-
-#: kdvi.cpp:693
-msgid "Go to"
-msgstr "Id¼ do"
-
-#: kdvi.cpp:714
-msgid "Missing PK-fonts will be generated"
-msgstr "Brakuj±ce PK-czcionki bêd± wygenerowane"
-
-#: kdvi.cpp:715
-msgid "Missing PK-fonts will be logged to 'missfont.log'"
-msgstr "Informacje o brakuj±cych PK-czcionkach bêd± zapisane do 'missfont.log'"
-
-#: kdvi.cpp:731
-msgid "Postcsript specials are rendered"
-msgstr "Specjalne dane Postcript s± renderowane"
-
-#: kdvi.cpp:732
-msgid "Postscript specials are not rendered"
-msgstr "Specjalne dane Postscript nie s± renderowane"
-
-#: kdvi.cpp:748
-msgid "No menu bar"
-msgstr "Brak paska menu"
-
-#: kdvi.cpp:748
-msgid "Menu bar is shown"
-msgstr "Pasek menu jest pokazany"
-
-#: kdvi.cpp:766
-msgid "No button bar"
-msgstr "Brak paska przycisków"
-
-#: kdvi.cpp:766
-msgid "Button bar is shown"
-msgstr "Pasek przycisków jest pokazany"
-
-#: kdvi.cpp:780
-msgid "Tool bar is shown"
-msgstr "Pasek narzêdzi"
-
-#: kdvi.cpp:780
-msgid "No tool bar"
-msgstr "Brak paska przycisków"
-
-#: kdvi.cpp:804
-msgid "No status bar"
-msgstr "Brak paska stanu"
-
-#: kdvi.cpp:804
-msgid "Status bar is shown"
-msgstr "Pasek stanu jest pokazany"
-
-#: kdvi.cpp:818
-msgid "Scroll bars are shown"
-msgstr "Paski przewijania s± pokazane"
-
-#: kdvi.cpp:818
-msgid "No scroll bars"
-msgstr "Brak pasków przewijania"
-
-#: kdvi.cpp:835
-msgid "About Kdvi"
-msgstr "Informacje o Kdvi"
-
-#: kdvi.cpp:836
-msgid ""
-"kdvi - TeX DVI viewer\n"
-"Version "
+#: kdvi.cpp:238
+msgid "DVI Viewer"
 msgstr ""
-"kdvi - przegl±darka TeX DVI\n"
-"Wersja "
 
-#: kdvi.cpp:838
+#: kdvi.cpp:240
+#, fuzzy
 msgid ""
 "\n"
 "\n"
-"Markku Hihnala <mah@ee.oulu.fi>"
+"by Markku Hihnala"
 msgstr ""
 "\n"
 "\n"
 "Markku Hihnala <mah@ee.oulu.fi>\n"
 "Polskie t³umaczenie\n"
 "(C) 1997 Piotr Roszatycki"
+
+#: kdvi.cpp:260
+msgid "Open document ..."
+msgstr "Otwórz dokument..."
+
+#: kdvi.cpp:261
+msgid "Reload document"
+msgstr "Prze³aduj dokument"
+
+#: kdvi.cpp:262
+msgid "Print ..."
+msgstr "Drukuj..."
+
+#: kdvi.cpp:264
+msgid "Go to first page"
+msgstr "Id¼ do pierwszej strony"
+
+#: kdvi.cpp:265
+msgid "Go to previous page"
+msgstr "Id¼ do poprzedniej strony"
+
+#: kdvi.cpp:266
+msgid "Go down then top of next page"
+msgstr "Id¼ do pocz±tku nastêpnej strony"
+
+#: kdvi.cpp:267
+msgid "Go to next page"
+msgstr "Id¼ do nastêpnej strony"
+
+#: kdvi.cpp:268
+msgid "Go to last page"
+msgstr "Id¼ do ostatniej strony"
+
+#: kdvi.cpp:270
+msgid "Decrease magnification"
+msgstr "Zmniejsz powiêkszenie"
+
+#: kdvi.cpp:271
+msgid "Small text"
+msgstr "Ma³y tekst"
+
+#: kdvi.cpp:272
+msgid "Large text"
+msgstr "Du¿y tekst"
+
+#: kdvi.cpp:273
+msgid "Increase magnification"
+msgstr "Zwiêksz powiêkszenie"
+
+#: kdvi.cpp:298
+msgid "Scroll window and switch the page"
+msgstr "Przewiñ okno i prze³±cz stronê"
+
+#: kdvi.cpp:307
+msgid "Select page and mark pages for printing"
+msgstr "Wybierz stronê i zaznacz strony do druku"
+
+#: kdvi.cpp:322
+msgid "X:0000, Y:0000 "
+msgstr "X:0000, Y:0000 "
+
+#: kdvi.cpp:324
+msgid "Shrink: xx"
+msgstr "Powiêkszenie: xx"
+
+#: kdvi.cpp:326
+msgid "Page: xxxx / xxxx"
+msgstr "Strona: xxxx / xxxx"
+
+#: kdvi.cpp:343 kdvi.cpp:395
+msgid "New window"
+msgstr "Nowe okno"
+
+#: kdvi.cpp:344 kdvi.cpp:396
+msgid "Open file"
+msgstr "Otwórz plik"
+
+#: kdvi.cpp:345 kdvi.cpp:397
+msgid "Print dialog"
+msgstr "Opcje wydruku"
+
+#: kdvi.cpp:347 kdvi.cpp:399
+msgid "Zoom in"
+msgstr "Powiêksz"
+
+#: kdvi.cpp:348 kdvi.cpp:400
+msgid "Zoom out"
+msgstr "Pomniejsz"
+
+#: kdvi.cpp:349 kdvi.cpp:401
+msgid "Fit window"
+msgstr "Dopasuj okno"
+
+#: kdvi.cpp:350 kdvi.cpp:402
+msgid "Fit width"
+msgstr "Dopasuj szeroko¶æ"
+
+#: kdvi.cpp:351 kdvi.cpp:403
+msgid "Redraw page"
+msgstr "Przerysuj stronê"
+
+#: kdvi.cpp:352 kdvi.cpp:405
+msgid "Next page"
+msgstr "Nastêpna strona"
+
+#: kdvi.cpp:353 kdvi.cpp:404
+msgid "Previous page"
+msgstr "Poprzednia strona"
+
+#: kdvi.cpp:354 kdvi.cpp:407
+msgid "Last page"
+msgstr "Ostatnia strona"
+
+#: kdvi.cpp:355 kdvi.cpp:406
+msgid "First page"
+msgstr "Pierwsza strona"
+
+#: kdvi.cpp:356 kdvi.cpp:408
+msgid "Goto page"
+msgstr "Id¼ do strony"
+
+#: kdvi.cpp:357
+msgid "Configure keys"
+msgstr "Skonfiguruj klawisze"
+
+#: kdvi.cpp:358 kdvi.cpp:409
+msgid "Toggle show PS"
+msgstr "Prze³±cz widok PS "
+
+#: kdvi.cpp:359 kdvi.cpp:410
+msgid "Toggle menu bar"
+msgstr "Prze³±cz pasek menu"
+
+#: kdvi.cpp:360 kdvi.cpp:411
+msgid "Toggle button bar"
+msgstr "Prze³±cz pasek przycisków"
+
+#: kdvi.cpp:361 kdvi.cpp:412
+msgid "Toggle page list"
+msgstr "Prze³±cz listê stron"
+
+#: kdvi.cpp:362 kdvi.cpp:413
+msgid "Toggle status bar"
+msgstr "Prze³±cz pasek stanu"
+
+#: kdvi.cpp:363 kdvi.cpp:414
+msgid "Toggle scroll bars"
+msgstr "Prze³±cz paski &przewijania"
+
+#: kdvi.cpp:466
+msgid "File open dialog is open"
+msgstr "Okno dialogowe pliku jest otwarte"
+
+#: kdvi.cpp:515
+msgid "Can't read file:\n"
+msgstr "Nie mo¿na odczytaæ pliku:\n"
+
+#: kdvi.cpp:521
+msgid "Opening "
+msgstr "Otwieranie "
+
+#: kdvi.cpp:546
+msgid "Opened "
+msgstr "Otwarty "
+
+#: kdvi.cpp:556
+msgid "Print dialog is open"
+msgstr "Okno dialogowe drukowania jest otwarte"
+
+#: kdvi.cpp:571
+msgid "View size fits page"
+msgstr "Poka¿ rozmiar dopasowanej strony"
+
+#: kdvi.cpp:580
+msgid "View width fits page"
+msgstr "Poka¿ d³ugo¶æ dopasowanej strony"
+
+#: kdvi.cpp:672
+msgid "Preferences applied"
+msgstr "W³a¶ciwo¶ci zastosowane"
+
+#: kdvi.cpp:676
+msgid " Page "
+msgstr " Strona "
+
+#: kdvi.cpp:678
+msgid "Go to page"
+msgstr "Id¼ do strony"
+
+#: kdvi.cpp:692
+msgid "Go to"
+msgstr "Id¼ do"
+
+#: kdvi.cpp:713
+msgid "Missing PK-fonts will be generated"
+msgstr "Brakuj±ce PK-czcionki bêd± wygenerowane"
+
+#: kdvi.cpp:714
+msgid "Missing PK-fonts will be logged to 'missfont.log'"
+msgstr "Informacje o brakuj±cych PK-czcionkach bêd± zapisane do 'missfont.log'"
+
+#: kdvi.cpp:730
+msgid "Postcsript specials are rendered"
+msgstr "Specjalne dane Postcript s± renderowane"
+
+#: kdvi.cpp:731
+msgid "Postscript specials are not rendered"
+msgstr "Specjalne dane Postscript nie s± renderowane"
+
+#: kdvi.cpp:747
+msgid "No menu bar"
+msgstr "Brak paska menu"
+
+#: kdvi.cpp:747
+msgid "Menu bar is shown"
+msgstr "Pasek menu jest pokazany"
+
+#: kdvi.cpp:765
+msgid "No button bar"
+msgstr "Brak paska przycisków"
+
+#: kdvi.cpp:765
+msgid "Button bar is shown"
+msgstr "Pasek przycisków jest pokazany"
+
+#: kdvi.cpp:779
+msgid "Tool bar is shown"
+msgstr "Pasek narzêdzi"
+
+#: kdvi.cpp:779
+msgid "No tool bar"
+msgstr "Brak paska przycisków"
+
+#: kdvi.cpp:803
+msgid "No status bar"
+msgstr "Brak paska stanu"
+
+#: kdvi.cpp:803
+msgid "Status bar is shown"
+msgstr "Pasek stanu jest pokazany"
+
+#: kdvi.cpp:817
+msgid "Scroll bars are shown"
+msgstr "Paski przewijania s± pokazane"
+
+#: kdvi.cpp:817
+msgid "No scroll bars"
+msgstr "Brak pasków przewijania"
 
 #: kdvi.cpp:874
 msgid "Page: "
@@ -690,3 +695,19 @@ msgstr "n-up"
 #: printSetupData.cpp:137
 msgid "Printing method"
 msgstr "Metoda wydruku"
+
+#~ msgid "&Contents"
+#~ msgstr "Pomo&c"
+
+#~ msgid "About &Qt"
+#~ msgstr "Informacje o &Qt"
+
+#~ msgid "About Kdvi"
+#~ msgstr "Informacje o Kdvi"
+
+#~ msgid ""
+#~ "kdvi - TeX DVI viewer\n"
+#~ "Version "
+#~ msgstr ""
+#~ "kdvi - przegl±darka TeX DVI\n"
+#~ "Wersja "
