moved some Makefiles to automake Taj: I tried to add a libpng test to configure. But I had to learn, that the png support in kview is broken. if you want to enable it again, just remove the three # in configure.in.1

--- a/configure.in.1
+++ b/configure.in.1
@@ -43,6 +43,12 @@ AC_SUBST(LIBKHTMLW)
 AC_FIND_GIF
 AC_FIND_JPEG
 
+# AC_CHECK_LIB(png, main, 
+# [ LIBPNG="-lpng -lz"
+#  AC_DEFINE_UNQUOTED(HAVE_LIBPNG)
+# ])
+AC_SUBST(LIBPNG)
+
 dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
