--- a/po/cs/kpaint.po
+++ b/po/cs/kpaint.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kpaint\n"
 "POT-Creation-Date: 1998-01-05 22:01+0100\n"
-"PO-Revision-Date: 1998-01-22 08:58 MET\n"
+"PO-Revision-Date: 1998-03-12 13:45 MET\n"
 "Last-Translator: Miroslav Flídr <flidr@kky.zcu.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,6 +18,8 @@ msgid ""
 "\n"
 "(c) Richard J. Moore 1997 Released under GPL see LICENSE for details\n"
 msgstr ""
+"\n"
+"(c) Richard J. Moore 1997 Uvolnìno podle GPL. Pro detaily nahlédnìte do souboru LICENSE.\n"
 
 #: app.cpp:41
 msgid "Usage: "
@@ -25,7 +27,7 @@ msgstr "Pou¾ití:"
 
 #: app.cpp:43
 msgid " [url | filename]\n"
-msgstr ""
+msgstr " [url | filename]\n"
 
 #: areaselect.cpp:20
 msgid "Area Selection"
