--- a/po/cs/kghostview.po
+++ b/po/cs/kghostview.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kghostview\n"
 "POT-Creation-Date: 1998-03-24 12:43+0100\n"
-"PO-Revision-Date: 1998-01-29 17:44 MET\n"
+"PO-Revision-Date: 1998-03-28 23:16 MET\n"
 "Last-Translator: Miroslav Flídr <flidr@kky.zcu.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -50,14 +50,12 @@ msgstr ""
 "Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA."
 
 #: goto.cpp:54
-#, fuzzy
 msgid "&Section"
-msgstr "Oddíl"
+msgstr "&Oddíl"
 
 #: goto.cpp:70
-#, fuzzy
 msgid "&Page"
-msgstr "Strana"
+msgstr "&Strana"
 
 #: goto.cpp:123 goto.cpp:130 goto.cpp:147 kghostview.cpp:2313
 #: kghostview.cpp:2325 kghostview.cpp:2330 kghostview.cpp:2599
@@ -66,79 +64,68 @@ msgid "of %d"
 msgstr "z %d"
 
 #: info.cpp:45
-#, fuzzy
 msgid "File name :"
-msgstr "Soubor :"
+msgstr "Jméno souboru :"
 
 #: info.cpp:53
 msgid "Document title :"
-msgstr ""
+msgstr "Název dokumentu :"
 
 #: info.cpp:61
 msgid "Publication date :"
-msgstr ""
+msgstr "Datum publikování :"
 
 #: interpreter.cpp:42
 msgid "General"
 msgstr "V¹eobecné"
 
 #: interpreter.cpp:79
-#, fuzzy
 msgid "&Interpreter name"
-msgstr "Jméno interpretru"
+msgstr "Jméno &interpretru"
 
 #: interpreter.cpp:87
-#, fuzzy
 msgid "&Antialiasing"
-msgstr "Antialiasing"
+msgstr "&Antialiasing"
 
 #: interpreter.cpp:97
-#, fuzzy
 msgid "Platform &fonts"
-msgstr "Znakové sady platformy"
+msgstr "Znakové sady plat&formy"
 
 #: interpreter.cpp:107
-#, fuzzy
 msgid "&Messages"
-msgstr "Hlá¹ení"
+msgstr "&Hlá¹ení"
 
 #: interpreter.cpp:130
 msgid "Palette"
 msgstr "Paleta"
 
 #: interpreter.cpp:152
-#, fuzzy
 msgid "Colo&r"
-msgstr "Barevná"
+msgstr "Ba&revná"
 
 #: interpreter.cpp:161
-#, fuzzy
 msgid "&Grayscale"
-msgstr "Odstíny ¹edi"
+msgstr "&Odstíny ¹edi"
 
 #: interpreter.cpp:169
-#, fuzzy
 msgid "Monochrom&e"
-msgstr "Monochromatická"
+msgstr "&Monochromatická"
 
 #: interpreter.cpp:192
 msgid "Backing"
 msgstr "Backing"
 
 #: interpreter.cpp:214
-#, fuzzy
 msgid "&Pixmap"
-msgstr "Pixmapa"
+msgstr "&Pixmapa"
 
 #: interpreter.cpp:224
-#, fuzzy
 msgid "&Backing store"
-msgstr "Zálo¾ní pamìt"
+msgstr "&Zálo¾ní pamìt"
 
 #: interpreter.cpp:244
-#, fuzzy
 msgid "&Defaults"
-msgstr "Implicitní"
+msgstr "Impli&citní"
 
 #: interpreter.cpp:314
 msgid "gs"
@@ -146,7 +133,7 @@ msgstr "gs"
 
 #: kghostview.cpp:196
 msgid "Document information"
-msgstr ""
+msgstr "Informace o dokumentu"
 
 #: kghostview.cpp:210 kghostview.cpp:345 kghostview.cpp:401 kghostview.cpp:490
 msgid "View Control"
@@ -199,7 +186,7 @@ msgstr "Aktualizovat"
 
 #: kghostview.cpp:455 kghostview.cpp:457
 msgid "Not known"
-msgstr ""
+msgstr "Neznámé"
 
 #: kghostview.cpp:468
 msgid "Configure interpreter"
@@ -309,7 +296,6 @@ msgstr "Zobrazovat nás&trojovou li¹tu"
 msgid "Show st&atus bar"
 msgstr "Zobrazovat &statusbar"
 
-# ???
 #: kghostview.cpp:601
 msgid "Show &page list"
 msgstr "Zobrazovat seznam &stránek"
@@ -348,27 +334,23 @@ msgstr "&Znaèky na stranách"
 
 #: kghostview.cpp:733
 msgid "New window ..."
-msgstr ""
+msgstr "Nové okno ..."
 
 #: kghostview.cpp:736
-#, fuzzy
 msgid "Open file ..."
-msgstr "&Otevøít ..."
+msgstr "Otevøít soubor ..."
 
 #: kghostview.cpp:741
-#, fuzzy
 msgid "Print document ..."
-msgstr "Tisknout dokument"
+msgstr "Tisknout dokument ..."
 
 #: kghostview.cpp:746
-#, fuzzy
 msgid "Zoom in"
-msgstr "Z&vìt¹it"
+msgstr "Zvìt¹it"
 
 #: kghostview.cpp:749
-#, fuzzy
 msgid "Zoom out"
-msgstr "Z&men¹it"
+msgstr "Zmen¹it"
 
 #: kghostview.cpp:752
 msgid "Change view ..."
@@ -399,9 +381,8 @@ msgid "Read down the page"
 msgstr "Posuò se dále na stranì"
 
 #: kghostview.cpp:784
-#, fuzzy
 msgid "Toggle this page mark"
-msgstr "Prohodit znaèky"
+msgstr "Prohodit znaèku u této strany"
 
 #: kghostview.cpp:806
 msgid "Sc.100 of 100  P.100 of 100"
@@ -496,7 +477,7 @@ msgstr ""
 
 #: kghostview.cpp:1658 kghostview.cpp:1773
 msgid "Printing error"
-msgstr ""
+msgstr "Chyba tisku"
 
 #: kghostview.cpp:1668
 msgid ""
@@ -505,23 +486,31 @@ msgid ""
 "that currently loaded into the viewer.\n"
 "There is no need to print all pages into a new file."
 msgstr ""
+"Vybral(a) jste tisk v¹ech stránek do souboru.\n"
+"Tato akce by vytvoøila dokument identický\n"
+"s tím, který je nahrán v prohlí¾eèi.\n"
+"Není nutné tisknout v¹echny strany do nového souboru."
 
 #: kghostview.cpp:1681
 msgid ""
 "No file name was given so\n"
 "nothing could be printed to a file.\n"
 msgstr ""
+"Nebylo zadáno jméno souboru a tudí¾\n"
+"není mo¾né tisknout do souboru.\n"
 
 #: kghostview.cpp:1738
-#, fuzzy, c-format
+#, c-format
 msgid "Print failure : %s"
-msgstr "Neuspì¹ný tisk: lpr"
+msgstr "Neuspì¹ný tisk: %s"
 
 #: kghostview.cpp:1774
 msgid ""
 "Printing failed because the list of\n"
 "pages to be printed was empty.\n"
 msgstr ""
+"Tisk byl neúspì¹ný, proto¾e seznam\n"
+"tisknutých stran byl prázdný.\n"
 
 #: kghostview.cpp:2307 kghostview.cpp:2319 kghostview.cpp:2570
 #: kghostview.cpp:2593
@@ -574,27 +563,26 @@ msgid "Sc.%d "
 msgstr "Odd.%d "
 
 #: main.cpp:25
-#, fuzzy
 msgid "Usage: "
-msgstr "Pou¾ití: %s\n"
+msgstr "Pou¾ití: "
 
 #: main.cpp:27
-#, fuzzy
 msgid ""
 " [filename] <siwtches>\n"
 "\n"
-msgstr "[jméno souboru]\n"
+msgstr "[jméno souboru] <pøepínaèe>\n\n"
 
 #: main.cpp:28
-#, fuzzy
 msgid ""
 "See KDE and Qt documentation for\n"
 "command line options.\n"
-msgstr "Nahlédni do dokumentate ke Qt na parametry pøíkazové øádky\n"
+msgstr ""
+"Nahlédni do dokumentate ke KDE a Qt\n"
+" na parametry pøíkazové øádky\n"
 
 #: main.cpp:30
 msgid "Command line error"
-msgstr ""
+msgstr "Chyba pøíkazové øádky"
 
 #: main.cpp:119
 #, c-format
@@ -606,10 +594,15 @@ msgid ""
 "\n"
 "Error: %s"
 msgstr ""
+"Není mo¾né otevøít dokument\n"
+"%s.\n"
+"®ádný dokument nebyl nahrán.\n"
+"\n"
+"Chyba: %s"
 
 #: main.cpp:131
 msgid "Open file error"
-msgstr ""
+msgstr "Chyba pøi otevírání souboru"
 
 #: marklist.cpp:38
 msgid "Mark current page"
@@ -641,74 +634,67 @@ msgstr "Hlá¹ení Ghostscriptu"
 
 #: messages.cpp:56
 msgid "&Clear"
-msgstr ""
+msgstr "&Vyèistit"
 
 #: messages.cpp:59 viewcontrol.cpp:114
 msgid "&Dismiss"
-msgstr ""
+msgstr "Zamí&tnout"
 
 #: print.cpp:35
-#, fuzzy
 msgid "Printer setup"
-msgstr "Jméno tiskárny"
+msgstr "Nastavení tiskárny"
 
 #: print.cpp:65
-#, fuzzy
 msgid "&Printer name"
-msgstr "Jméno tiskárny"
+msgstr "&Jméno tiskárny"
 
 #: print.cpp:77
 msgid "&Spooler command"
-msgstr ""
+msgstr "Pøíkaz &spooleru"
 
 #: print.cpp:89
 msgid "&Environment variable"
-msgstr ""
+msgstr "Promìnná prostø&edí"
 
 #: print.cpp:148
-#, fuzzy
 msgid "Print to file"
-msgstr "Neuspì¹ný tisk: lpr"
+msgstr "Tisk do souboru"
 
 #: print.cpp:153
 msgid "Pages"
 msgstr "Strany"
 
 #: print.cpp:179
-#, fuzzy
 msgid "&All"
-msgstr "V¹echny"
+msgstr "&V¹echny"
 
 #: print.cpp:188
 msgid "&Current"
-msgstr ""
+msgstr "&Aktuální"
 
 #: print.cpp:196
-#, fuzzy
 msgid "&Marked"
-msgstr "Oznaèené"
+msgstr "&Oznaèené"
 
 #: print.cpp:205
 msgid "&Range"
-msgstr ""
+msgstr "&Rozsah"
 
 #: print.cpp:219
 msgid "to"
-msgstr ""
+msgstr "do"
 
 #: print.cpp:232
-#, fuzzy
 msgid "Print document in re&verse order"
-msgstr "Tisknout dokument"
+msgstr "Tisknout dokument v obráceném poøadí"
 
 #: print.cpp:249
-#, fuzzy
 msgid "&Setup ..."
-msgstr "&Otevøít ..."
+msgstr "&Nastavit ..."
 
 #: print.cpp:289
 msgid "Range error"
-msgstr ""
+msgstr "Chyba rozsahu"
 
 #: print.cpp:290
 msgid ""
@@ -719,54 +705,29 @@ msgid ""
 "range for this part of the document.\n"
 "Check the status bar for this information.\n"
 msgstr ""
+"Nerozumím rozsahu stránek k tisku\n"
+"\n"
+"Specifikovaný rozsah musí být\n"
+"v rozsahu této èásti dokumentu.\n"
+"Zkontroluj status bar k zji¹tìní\n"
+"této informace.\n"
 
 #: viewcontrol.cpp:36
-#, fuzzy
 msgid "Force changes to ..."
-msgstr "Vynutit zmìny "
+msgstr "Vynutit zmìny ..."
 
 #: viewcontrol.cpp:78
-#, fuzzy
 msgid "&magnification"
-msgstr "Zvìt¹ení"
+msgstr "&zvìt¹ení"
 
 #: viewcontrol.cpp:86
-#, fuzzy
 msgid "m&edia"
-msgstr "Medium"
+msgstr "&media"
 
 #: viewcontrol.cpp:94
-#, fuzzy
 msgid "&orientation"
-msgstr "Orientace"
+msgstr "&orientace"
 
 #: viewcontrol.cpp:111
 msgid "&Apply"
-msgstr ""
-
-#~ msgid "Title :"
-#~ msgstr "Název :"
-
-#~ msgid "Date :"
-#~ msgstr "Datum :"
-
-#~ msgid "Mark this page"
-#~ msgstr "Oznaè tuto stanu"
-
-#~ msgid "Printer Name : "
-#~ msgstr "Název tiskárny :"
-
-#~ msgid "No pages have been marked for printing."
-#~ msgstr "Nebyly oznaèeny ¾ádné strany pro tisk."
-
-#~ msgid ""
-#~ "The file\n"
-#~ "\"%s\"\n"
-#~ "could not be found."
-#~ msgstr ""
-#~ "Soubor\n"
-#~ "\"%s\"\n"
-#~ "není mo¾né nalézt"
-
-#~ msgid "Didn't recognise file\n"
-#~ msgstr "Není mo¾né rozpoznat datový formát\n"
+msgstr "&Aplikovat"
