--- a/po/kfax.pot
+++ b/po/kfax.pot
@@ -1,10 +1,18 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR Free Software Foundation, Inc.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
+#, fuzzy
 msgid ""
 msgstr ""
-"Date: 1998-03-08 16:14:13-0500\n"
-"From: Bernd Johannes Wuebben,201 Lincoln Hall,,256-1036, <root@petit.cornell.edu>\n"
-"Content-Type: text/plain; charset=\n"
-"Xgettext-Options: -C -ki18n -x../../kdelibs/po/kde.pot\n"
-"Files: about.cpp faxexpand.cpp faxinit.cpp faxinput.cpp g3hack.cpp kfax.cpp options.cpp print.cpp viewfax.cpp\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"POT-Creation-Date: 1998-04-09 18:29+0200\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Transfer-Encoding: ENCODING\n"
 
 #: about.cpp:39
 msgid "About KFax"
@@ -171,16 +179,19 @@ msgid "     There is no document active      "
 msgstr ""
 
 #: kfax.cpp:988
+#, c-format
 msgid ""
 "Invalid page dimensions:\n"
 "Width %.2f Height %.2f\n"
 msgstr ""
 
 #: kfax.cpp:1004
+#, c-format
 msgid "Can't print to \"%s\"\n"
 msgstr ""
 
 #: kfax.cpp:1015
+#, c-format
 msgid "Couldn't create %s\n"
 msgstr ""
 
@@ -214,6 +225,7 @@ msgid "Could not communicate with KFM"
 msgstr ""
 
 #: kfax.cpp:1184
+#, c-format
 msgid "Loading '%s'"
 msgstr ""
 
